student login and profile design

--- a/Header/student_navibar.html
+++ b/Header/student_navibar.html
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href="dashboard.php">Dashboard</a>
+            <a class="nav-link" href="student_dashboard_content.php">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="program.php">Program</a>
+          <a class="nav-link" href="student_meeting.php">Meeting</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notification</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="profile.php">Profile</a>
+          <a class="nav-link" href="student_profile.php">Profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/enterprise/Logout.php">Logout</a>
