student and database update

--- a/Header/student_navibar.html
+++ b/Header/student_navibar.html
@@ -16,11 +16,18 @@
           <a class="nav-link" href="#">Notification</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#">File Management</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="student_profile.php">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/enterprise/Logout.php">Logout</a>
+          <a class="nav-link" href="../enterprise/Logout.php">Logout</a>
         </li>
+        
       </ul>
     </div>
   </nav>
