--- a/Header/admin_navibar.html
+++ b/Header/admin_navibar.html
@@ -10,6 +10,9 @@
             <a class="nav-link" href="admin_dashboard_content.php">Dashboard</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="Account.php">Account</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="admin_register_user.php">Register</a>
         </li>
         <li class="nav-item">
@@ -21,6 +24,7 @@
         <li class="nav-item">
           <a class="nav-link" href="Logout.php">Logout</a>
         </li>
+        
         
       </ul>
     </div>
