list student lecturer account done
manage group student lecturer doing

--- a/Header/admin_navibar.html
+++ b/Header/admin_navibar.html
@@ -10,10 +10,7 @@
             <a class="nav-link" href="admin_dashboard_content.php">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Account.php">Account</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="admin_register_user.php">Register</a>
+          <a class="nav-link" href="admin_account.php">Account</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notification</a>
@@ -22,7 +19,7 @@
           <a class="nav-link" href="admin_group.php">Group</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Logout.php">Logout</a>
+          <a class="nav-link" href="../Logout.php">Logout</a>
         </li>
         
         
