--- a/Header/student_navibar.html
+++ b/Header/student_navibar.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="student_profile.php">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../enterprise/Logout.php">Logout</a>
+          <a class="nav-link" href="../Logout.php">Logout</a>
         </li>
         
       </ul>
