--- a/Header/student_navibar.html
+++ b/Header/student_navibar.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#">Notification</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">File Management</a>
+          <a class="nav-link" href="student_file.php">File Management</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Blog</a>
