--- a/Header/lecturer_navibar.html
+++ b/Header/lecturer_navibar.html
@@ -10,7 +10,10 @@
             <a class="nav-link" href="#">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Meeting</a>
+          <a class="nav-link" href="lecturer_add_timeslot.php">Time Slot</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Meeting</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notification</a>
