--- a/Header/lecturer_navibar.html
+++ b/Header/lecturer_navibar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="lecturer_add_timeslot.php">Time Slot</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Meeting</a>
+          <a class="nav-link" href="lecturer_meeting.php">Meeting</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notification</a>
