dashboard,blog done

--- a/Header/student_navibar.html
+++ b/Header/student_navibar.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="student_file.php">File Management</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="student_blog.php">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="student_profile.php">Profile</a>
