--- a/Header/lecturer_navibar.html
+++ b/Header/lecturer_navibar.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">Dashboard</a>
+            <a class="nav-link" href="lecturer_dashboard_content.php">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="lecturer_add_timeslot.php">Time Slot</a>
@@ -22,7 +22,7 @@
           <a class="nav-link" href="lecturer_file.php">File Management</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="lecturer_blog.php">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="lecturer_profile.php">Profile</a>
