--- a/Header/lecturer_navibar.html
+++ b/Header/lecturer_navibar.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="lecturer_meeting.php">Meeting</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Notification</a>
+          <a class="nav-link" href="lecturer_notification.php">Notification</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="lecturer_file.php">File Management</a>
