--- a/Header/student_navibar.html
+++ b/Header/student_navibar.html
@@ -1,4 +1,6 @@
 
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">Your Tutorial Website</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +15,7 @@
           <a class="nav-link" href="student_meeting.php">Meeting</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Notification</a>
+          <a id="notification-link" class="nav-link" href="notification.php">Notification</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="student_file.php">File Management</a>
@@ -31,3 +33,9 @@
       </ul>
     </div>
   </nav>
+
+
+  
+
+
+  
